# pdarts_autogoal

./: AutoGOAL PDARTS.ipynb  README.md  dummy.py  pyproject.toml  python_images_download.py  run_pipeline.py
pdarts_autogoal/pdarts/: __init__.py  _pdarts.py  genotypes.py  utils.py
pdarts_autogoal/pipeline/: __init__.py
pdarts_autogoal/preprocessing/: __init__.py  preprocessors.py
